<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"

        android:fontFamily="serif"
        android:text="@string/loginTitleText"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/loginUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"

        android:layout_marginTop="32dp"
        android:backgroundTint="@color/itemColor"

        android:fontFamily="serif"
        android:hint="@string/loginUsernameText"
        android:textCursorDrawable="@color/itemColor"

        app:layout_constraintEnd_toEndOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        />

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"

        android:layout_marginTop="32dp"
        android:backgroundTint="@color/itemColor"

        android:fontFamily="serif"
        android:hint="@string/passwordHintText"
        android:textCursorDrawable="@color/itemColor"

        app:layout_constraintEnd_toEndOf="@+id/loginUsernameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginUsernameText"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameText"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="166dp"
        android:layout_height="35dp"

        android:layout_marginTop="20dp"
        android:background="@drawable/button_layout"

        android:fontFamily="serif"
        android:text="@string/loginButtonText"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="@+id/loginPasswordText"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText"
        />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminate="true"
        android:indeterminateTint="@color/itemColor"

        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"

        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText"
        />

    <TextView
        android:id="@+id/toRegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"

        android:text="@string/noAccountText"
        android:fontFamily="serif"

        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>