<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context=".fragments.RemoveFavoriteFragment"
    android:background="@drawable/cornered_layout"
    >

    <TextView
        android:id="@+id/removeFavoriteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"

        android:fontFamily="serif"
        android:text="@string/removeFavoritesQuestionText"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/removeFavoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/button_layout"

        android:fontFamily="serif"
        android:text="@string/yesText"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="@+id/removeFavoriteText"
        app:layout_constraintTop_toBottomOf="@+id/removeFavoriteText"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"

        android:background="@drawable/button_layout"

        android:fontFamily="serif"
        android:text="@string/noText"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="@+id/removeFavoriteText"
        app:layout_constraintTop_toBottomOf="@+id/removeFavoriteText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>