<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"

    app:cardCornerRadius="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:cardCornerRadius="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/restaurantImage"
                android:layout_width="140dp"
                android:layout_height="132dp"
                android:contentDescription="@string/restaurant_item_image"

                app:srcCompat="@drawable/ic_restaurant"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/restaurantTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"

            android:maxLines="2"
            android:ellipsize="end"

            android:fontFamily="serif"
            android:text="@string/namePlaceholder"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageHolder"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/restaurantAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"

            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"

            android:maxLines="2"
            android:ellipsize="end"

            app:drawableStartCompat="@drawable/ic_address"
            android:drawablePadding="10dp"

            android:fontFamily="serif"
            android:text="@string/detailAddressPlaceholder"
            android:textSize="12sp"

            app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageHolder"
            app:layout_constraintTop_toBottomOf="@+id/restaurantPrice"
            />

        <TextView
            android:id="@+id/restaurantPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"

            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"

            app:drawableStartCompat="@drawable/ic_price_tag"
            android:drawablePadding="10dp"

            android:fontFamily="serif"
            android:text="@string/detailPricePlaceholder"
            android:textSize="12sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageHolder"
            app:layout_constraintTop_toBottomOf="@+id/restaurantTitle"
            />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorite_button_content"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"

            android:background="@null"
            app:srcCompat="@drawable/ic_heart"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantAddress"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

